[package]
name = "warpgrapher-rocket"
version = "0.9.1"
authors = ["dev"]
edition = "2021"

[dependencies]
juniper_rocket = "0.8.0"
rocket = { version="0.5.0-rc.1", features = ["json"] }
serde = "1.0.136"
serde_json = "1.0.78"
tokio = { version="1.16.1" }
warpgrapher = { version="0.9.1", features = ["neo4j"] }
