[package]
name = "warpgrapher-rocket"
version = "0.11.1"
authors = ["dev"]
edition = "2021"

[dependencies]
juniper_rocket = "0.8.2"
rocket = { version="0.5.0-rc.2", features = ["json"] }
serde = "1.0.137"
serde_json = "1.0.82"
tokio = { version="1.19.2" }
warpgrapher = { version="0.11.1", features = ["cypher"] }
